@@ -60,8 +60,8 @@ CTokenListCategory::CTokenListCategory(bool isDryRun,
       m_OrderedCommonTokenEndIndex{baseTokenIds.size()},
       // Note: m_CommonUniqueTokenIds is required to be in sorted order, and
       // this relies on uniqueTokenIds being in sorted order
-      m_CommonUniqueTokenIds{uniqueTokenIds.begin(), uniqueTokenIds.end()},
-      m_CommonUniqueTokenWeight{0}, m_OrigUniqueTokenWeight{0}, m_NumMatches{isDryRun ? 0u : 1u} {
+      m_CommonUniqueTokenIds{uniqueTokenIds.begin(), uniqueTokenIds.end()}, m_CommonUniqueTokenWeight{0},
+      m_OrigUniqueTokenWeight{0}, m_NumMatches{isDryRun ? 0u : 1u}, m_Changed{!isDryRun} {
     for (auto uniqueTokenId : uniqueTokenIds) {
         m_CommonUniqueTokenWeight += uniqueTokenId.second;
     }
@@ -205,6 +205,9 @@ bool CTokenListCategory::addString(bool isDryRun,
     if (!isDryRun) {
         ++m_NumMatches;
         changed = true;
+    }
+    if (changed) {
+        m_Changed = true;
     }
 
     return changed;
@@ -505,6 +508,14 @@ std::size_t CTokenListCategory::memoryUsage() const {
     mem += core::CMemory::dynamicSize(m_ReverseSearchPart1);
     mem += core::CMemory::dynamicSize(m_ReverseSearchPart2);
     return mem;
+}
+
+bool CTokenListCategory::isChangedAndReset() {
+    if (m_Changed) {
+        m_Changed = false;
+        return true;
+    }
+    return false;
 }
 }
 }
