@@ -520,4 +520,36 @@ BOOST_FIXTURE_TEST_CASE(testPreTokenisedPerformance, CTestFixture) {
     }
 }
 
+BOOST_FIXTURE_TEST_CASE(testUsurpedCategories, CTestFixture) {
+    TTokenListDataCategorizerKeepsFields categorizer(
+        m_Limits, NO_REVERSE_SEARCH_CREATOR, 0.7, "whatever");
+
+    BOOST_REQUIRE_EQUAL(1, categorizer.computeCategory(false, "2015-10-18 18:01:51,963 INFO [main] org.mortbay.log: jetty-6.1.26\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(2, categorizer.computeCategory(false, "2015-10-18 18:01:52,728 INFO [main] org.mortbay.log: Started HttpServer2$SelectChannelConnectorWithSafeStartup@0.0.0.0:62267\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(3, categorizer.computeCategory(false, "2015-10-18 18:01:53,400 INFO [main] org.apache.hadoop.yarn.webapp.WebApps: Registered webapp guice modules\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(4, categorizer.computeCategory(false, "2015-10-18 18:01:53,447 INFO [main] org.apache.hadoop.mapreduce.v2.app.rm.RMContainerRequestor: nodeBlacklistingEnabled:true\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(5, categorizer.computeCategory(false, "2015-10-18 18:01:52,728 INFO [main] org.apache.hadoop.yarn.webapp.WebApps: Web app /mapreduce started at 62267\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(6, categorizer.computeCategory(false, "2015-10-18 18:01:53,557 INFO [main] org.apache.hadoop.yarn.client.RMProxy: Connecting to ResourceManager at msra-sa-41/10.190.173.170:8030\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(7, categorizer.computeCategory(false, "2015-10-18 18:01:53,713 INFO [main] org.apache.hadoop.mapreduce.v2.app.rm.RMContainerAllocator: maxContainerCapability: <memory:8192, vCores:32>\r",
+                                                       500));
+    BOOST_REQUIRE_EQUAL(1, categorizer.computeCategory(false, "2015-10-18 18:01:53,713 INFO [main] org.apache.hadoop.yarn.client.api.impl.ContainerManagementProtocolProxy: yarn.client.max-cached-nodemanagers-proxies : 0\r",
+                                                       500));
+
+    BOOST_REQUIRE_EQUAL(2, categorizer.numMatches(1));
+    std::vector<int> expected{2, 3, 4, 5, 6};
+    std::vector<int> actual = categorizer.usurpedCategories(1);
+
+    BOOST_REQUIRE_EQUAL(expected.size(), actual.size());
+    for (std::size_t i = 0; i < actual.size(); i++) {
+        BOOST_REQUIRE_EQUAL(expected[i], actual[i]);
+    }
+    checkMemoryUsageInstrumentation(categorizer);
+}
+
 BOOST_AUTO_TEST_SUITE_END()
