@@ -45,6 +45,8 @@
 * Take `training_percent` into account when estimating memory usage for classification and regression. 
   (See {ml-pull}1111[1111].)
 * Improve robustness of anomaly detection to bad input data. (See {ml-pull}1114[#1114].)
+* Adds new `num_matches` and `preferred_to_categories` fields to category output.
+  (See {ml-pull}1062[#1062])
 
 == {es} version 7.7.0
 
